--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Delius&family=Poetsen+One&display=swap");
 
 html {
-  background-color: white;
+  background-color: rgb(199, 183, 234 );
   padding-left: 20px;
 }
 
@@ -10,5 +10,104 @@ img{
 }
 
 h1 {
-  font-family: "Poetsen One", sans-serif;
+  font-family: "Limelight", sans-serif;
+  color: rgb(97, 40, 220);
+  font-size: 40px;
+  
+}
+h2{
+ font-size:20px; 
+
+}
+h3{
+ 
+ 
+font-family: "Limelight", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 30px; 
+}
+h4{
+  align-content: right; 
+  
+}
+body {
+  text-align: center; 
+ 
+}
+#mem1-button {
+  font-size: 30px; 
+}
+#mem2-button {
+   font-size: 30px; 
+}
+#mem3-button {
+  font-size: 30px; 
+}
+.buttons {
+  display: flex;
+   justify-content: space-between; 
+  align-items: center;
+  margin-right: 600px;
+  margin-left: 600px; 
+ 
+}
+
+.by-bree {
+  float: right; 
+  margin-right: 60px;
+  color: rgb(97, 40, 220);
+}
+.memory{
+ font-family: "Ephesis", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 40px;
+
+}
+#beachmemory{
+  font-size: 20px; 
+   justify-content: space-between; 
+}
+#details-beach-memory{
+  fill:blue;
+  font-size:20px; 
+  float:right; 
+  color: white; 
+  
+}
+td { text-align: center;
+  padding: 20px; 
+  align: center; 
+}
+table {
+  margin-left:auto;
+  margin-right:auto;
+}
+.beachtable {
+  background: rgb( 129, 163, 223);
+width: 1030px;
+}
+.bluetext {
+  color: darkblue;
+}
+.bigger {
+  font-size: 33px; 
+}
+.camptext {
+  background-color: rgb(132, 191, 120 );
+    padding: 20px; 
+  margin: auto;
+  width: 1000px;
+}
+.actingtext{
+    width: 1000px;
+    background-color: rgb(186, 120, 191);
+    padding: 20px; 
+   margin: auto;
+    justify-content: center;
+}      
+.divimages{
+  display: flex; 
+ justify-content: space-evenly; 
 }
